# ImageQualityAssessment

./: CMakeLists.txt  README.md  colorfulMeasure.py
include/: ImageQualityAssessment.h
src/: ImageQualityAssessment.cpp
tests/: main.cpp
